--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,9 @@
     margin: 0 auto;
     padding: 0 10px;
 }
+.title {
+    font-weight: 700;
+    font-size: 34px;
+    text-align: center;
+    margin-bottom: 40px;
+}
