--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,3 +1,5 @@
 .header{
-    margin-top: 32px;
+    padding-top: 32px;
+    background: radial-gradient(50% 50% at 50% 50%, rgba(26, 21, 21, 0) 0%, rgba(1, 1, 1, 0.05) 100%), #FFFFFF;
+    mix-blend-mode: normal;
 }
