--- a/src/main/about/About.module.scss
+++ b/src/main/about/About.module.scss
@@ -1,6 +1,8 @@
 .wrapper{
-  margin-top: 36px;
+  padding-top: 36px;
   min-height: 650px;
+  background: radial-gradient(75% 25% at 25% 25%, rgba(26, 21, 21, 0) 0%, rgba(1, 1, 1, 0.05) 100%), #FFFFFF;
+  mix-blend-mode: normal;
 }
 .inner{
   display: flex;
