--- a/src/main/portfolio/project/Project.module.scss
+++ b/src/main/portfolio/project/Project.module.scss
@@ -1,4 +1,34 @@
-.projectBlock{
+.projectBlock {
+  min-height: 150px;
   box-shadow: 0 2px 4px rgba(97, 97, 97, 0.18), 0px 4px 8px rgba(97, 97, 97, 0.18);
   border-radius: 12px;
+  overflow: hidden;
+  transition: all 0.3s;
+  margin-bottom: 30px;
+  &:hover{
+
+    transform: scale(1.1) translateX(5px) translateY(-5px);
+    box-shadow: 0 4px 8px rgba(97, 97, 97, 0.58), 0px 8px 20px rgba(97, 97, 97, 0.58);
+    filter:saturate(120%) brightness(110%);
+  }
+}
+.imgBlock{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.stack{
+  max-width: 150px;
+}
+.link{
+ display: block;
+}
+.info{
+  padding: 5px;
+  height: 30%;
 }
