Portfolio section complete

--- a/src/main/skills/Skills.module.scss
+++ b/src/main/skills/Skills.module.scss
@@ -15,7 +15,7 @@
   grid-template-columns: repeat(4, 150px);
   grid-template-rows: repeat(2, minmax(150px, auto));
   grid-auto-rows:minmax(150px, auto);
-  gap: 13px 13px;
+  gap: 20px;
   justify-content: center;
   padding: 20px;
 
