--- a/src/main/portfolio/project/Project.module.scss
+++ b/src/main/portfolio/project/Project.module.scss
@@ -1,18 +1,26 @@
 .projectBlock {
+  padding-bottom: 5px;
   min-height: 150px;
   box-shadow: 0 2px 4px rgba(97, 97, 97, 0.18), 0px 4px 8px rgba(97, 97, 97, 0.18);
   border-radius: 12px;
   overflow: hidden;
   transition: all 0.3s;
   margin-bottom: 30px;
-  &:hover{
 
+  &:hover {
     transform: scale(1.1) translateX(5px) translateY(-5px);
     box-shadow: 0 4px 8px rgba(97, 97, 97, 0.58), 0px 8px 20px rgba(97, 97, 97, 0.58);
-    filter:saturate(120%) brightness(110%);
+    filter: saturate(120%) brightness(105%);
+
+    & .stackInfo {
+      filter: saturate(100%) brightness(100%);
+      //transform: scale(1);
+      opacity: 1;
+    }
   }
 }
-.imgBlock{
+
+.imgBlock {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,13 +30,80 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-.stack{
-  max-width: 150px;
+.stackInfo{
+  width: 180px;
+  font-weight: 500;
+  line-height: 1.4;
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius:12px ;
+  border: 1px solid #E0E0E0;
+  -webkit-transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  -ms-transition: opacity 0.3s;
+  -o-transition:opacity 0.3s;
+  transition: opacity 0.3s;
+  opacity: 0;
 }
-.link{
- display: block;
+.stack {
+  margin-bottom: 5px;
+  span{
+    display: block;
+    font-size: 19px;
+  }
 }
-.info{
+.linksBlock{
+  display: flex;
+
+}
+.link {
+  padding: 5px;
+  margin: 0 auto;
+  text-align: center;
+  cursor: pointer;
+  border-radius:10px ;
+  border: 1px solid rgba(224, 224, 224, 1);
+  background-color: rgba(255, 255, 255, 0.9);
+  -webkit-transition: border-color 0.3s, box-shadow 0.3s;
+  -moz-transition: border-color 0.3s, box-shadow 0.3s;
+  -ms-transition: border-color 0.3s, box-shadow 0.3s;
+  -o-transition: border-color 0.3s, box-shadow 0.3s;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  &:hover{
+    border-color: black;
+    box-shadow: 0 2px 4px rgba(97, 97, 97, 0.3), 0px 4px 8px rgba(97, 97, 97, 0.3);
+  }
+  &:active{
+    box-shadow: inset 0px 10px 4px rgba(0, 0, 0, 0.1);
+  }
+}
+
+.info {
   padding: 5px;
   height: 30%;
 }
+
+.title {
+  font-size: 18px;
+  padding-left: 10px;
+  position: relative;
+  letter-spacing: 0.005em;
+  margin-bottom: 5px;
+
+  &::after {
+    position: absolute;
+    content: '';
+    left: 10px;
+    bottom: -2px;
+    width: 20px;
+    height: 1px;
+    background-color: black;
+  }
+}
+
+.descr {
+  color: #414141;
+  font-size: 16px;
+  text-align: center;
+}
+
