--- a/src/main/skills/skill/Skill.module.scss
+++ b/src/main/skills/skill/Skill.module.scss
@@ -3,13 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  margin: 0 auto;
   padding: 20px 20px;
   min-width: 150px;
   min-height: 150px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(97, 97, 97, 0.18), 0px 4px 8px rgba(97, 97, 97, 0.18);
   border-radius: 12px;
+
 }
 
 .img{
