Contacts and footer sections complete

--- a/src/main/experience/slider/Slider.module.scss
+++ b/src/main/experience/slider/Slider.module.scss
@@ -17,8 +17,8 @@
   align-self: normal;
 }
 .courses{
-  background-position: left top,center bottom, 80% top ;
-  background-size: 75px, 70px, 70px ;
+  background-position: 20px 10px,30px 80px, 80% center ;
+  background-size: 50px, 50px, 50px ;
   background-repeat: no-repeat;
 }
 .lotte{
