--- a/src/header/navigation/Nav.module.scss
+++ b/src/header/navigation/Nav.module.scss
@@ -8,19 +8,6 @@
   &.navList_active{
     transform: translateX(0);
   }
-}
-
-.navLink{
-  font-weight: 700;
-  font-size: 18px;
-  color: #828282;
-  transition: color 0.5s linear;
-  &:hover{
-    color: #070707;
-  }
-  &_active{
-    color: #070707;
-  }
   &::after{
     position: absolute;
     content: '';
@@ -33,10 +20,46 @@
   }
 }
 
+.navLink{
+  position: relative;
+  font-weight: 700;
+  font-size: 18px;
+  color: #828282;
+  transition: color 0.3s linear;
+  &::after{
+    position: absolute;
+    content: '';
+    top:53px;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: #000;
+
+    -webkit-transition: width 0.3s linear;
+    -moz-transition: width 0.3s linear;
+    -ms-transition: width 0.3s linear;
+    -o-transition: width 0.3s linear;
+    transition: width 0.3s linear;
+    z-index: 2;
+  }
+  &:hover{
+    color: #070707;
+    &::after {
+      width: 100%;
+    }
+  }
+
+
+}
+
 .langAdaptive {
   transform: rotate(90deg);
   position: absolute;
   bottom: 100px;
   right: 0;
   font-size: 34px;
+}
+
+.active{
+  color: #070707;
 }
