--- a/src/main/experience/slider/Slider.scss
+++ b/src/main/experience/slider/Slider.scss
@@ -214,8 +214,13 @@
   bottom: -10px;
   margin:  0;
   padding: 0;
-  left: 100px;
-  width: 100%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 75px;
   z-index: 1; }
 @media (min-width: 960px) {
   .carousel .control-dots {
