--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -41,7 +41,7 @@
     width: 40px;
     height: 40px;
     border-radius:50%;
-    box-shadow: 0 2px 4px rgb(97 97 97 / 18%), 0px 4px 8px rgb(97 97 97 / 18%);
+    box-shadow: 0 2px 4px rgb(97 97 97 / 18%), 0 4px 8px rgb(97 97 97 / 18%);
     -webkit-transition: box-shadow 0.3s ease;
     -moz-transition: box-shadow 0.3s ease;
     -ms-transition: box-shadow 0.3s ease;
@@ -50,9 +50,6 @@
 
     &:hover {
         box-shadow: 2px 2px 2px rgba(97, 97, 97, 0.58), 2px 4px 5px rgba(97, 97, 97, 0.58);
-    }
-    &:focus {
-        outline: transparent;
     }
     &:active {
         box-shadow: 1px 1px 1px rgba(97, 97, 97, 0.7), 1px 2px 2px rgba(97, 97, 97, 0.7);
