--- a/src/header/navigation/burger/BurgerMenuBtn.module.scss
+++ b/src/header/navigation/burger/BurgerMenuBtn.module.scss
@@ -29,9 +29,28 @@
   .btn{
     display: block;
     position: absolute;
+    padding: 10px;
     right: 20px;
     top: 68px;
     z-index: 15;
+    border-radius: 12px;
+    cursor: pointer;
+    -webkit-transition: box-shadow 0.3s ease;
+    -moz-transition: box-shadow 0.3s ease;
+    -ms-transition: box-shadow 0.3s ease;
+    -o-transition: box-shadow 0.3s ease;
+    transition: box-shadow 0.3s ease;
+
+    &:hover {
+      box-shadow: 2px 2px 2px rgba(97, 97, 97, 0.58), 2px 4px 5px rgba(97, 97, 97, 0.58);
+    }
+    &:focus {
+      outline: transparent;
+      box-shadow: 2px 2px 2px rgba(97, 97, 97, 0.58), 2px 4px 5px rgba(97, 97, 97, 0.58);
+    }
+    &:active {
+      box-shadow: 1px 1px 1px rgba(97, 97, 97, 0.7), 1px 2px 2px rgba(97, 97, 97, 0.7);
+    }
   }
 
 
