--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ a{
   text-decoration: none;
 }
 body {
+  overflow-x: hidden;
   margin: 0;
   font-family: 'Gilroy',  sans-serif;
   -webkit-font-smoothing: antialiased;
