--- a/src/main/skills/skill/Skill.module.scss
+++ b/src/main/skills/skill/Skill.module.scss
@@ -10,7 +10,9 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(97, 97, 97, 0.18), 0px 4px 8px rgba(97, 97, 97, 0.18);
   border-radius: 12px;
-
+&:nth-child(9){
+  grid-column-start: 2;
+}
 }
 
 .img{
@@ -24,4 +26,15 @@
   font-size: 14px;
   line-height: 21px;
   text-align: center;
+}
+
+@media(max-width: 768px){
+  .skillBlock{
+    &:nth-child(9){
+      grid-column-start: initial;
+    }
+    &:nth-child(10){
+      grid-column-start: 2;
+    }
+  }
 }
