--- a/src/main/portfolio/project/Project.module.scss
+++ b/src/main/portfolio/project/Project.module.scss
@@ -65,6 +65,7 @@
   border-radius:10px ;
   border: 1px solid rgba(224, 224, 224, 1);
   background-color: rgba(255, 255, 255, 0.9);
+  color: #070707;
   -webkit-transition: border-color 0.3s, box-shadow 0.3s;
   -moz-transition: border-color 0.3s, box-shadow 0.3s;
   -ms-transition: border-color 0.3s, box-shadow 0.3s;
