--- a/src/header/navigation/Nav.module.scss
+++ b/src/header/navigation/Nav.module.scss
@@ -58,16 +58,18 @@
 }
 
 @media (max-width: 576px) {
+
   .navList {
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
+    height: 100vh;
     flex-direction: column;
     justify-content: flex-start;
     background-color: #fff;
-    z-index: 10;
+    z-index: 11;
     padding-top: 66px;
     padding-left: 26px;
     transition: all .5s;
@@ -97,9 +99,9 @@
     display: flex;
     justify-content: center;
     gap: 25px;
-    z-index: 11;
+    z-index: 12;
     transition: all .5s;
-    transform: translateX(100%);
+    transform: translateX(200%);
 
     &.active {
       transform: translate(0);
