--- a/src/main/hireMe/form/Form.module.scss
+++ b/src/main/hireMe/form/Form.module.scss
@@ -1,6 +1,7 @@
 .form {
   padding: 10px 0;
   width: 100%;
+  -webkit-appearance: none;
 }
 
 .wrapper {
@@ -16,12 +17,13 @@
 }
 
 .input {
+  -webkit-appearance: none;
   width: 100%;
   font-size: 16px;
   padding: 15px 20px;
   border-radius: 12px;
   border: none;
-  box-shadow: 0 2px 4px rgb(97 97 97 / 18%), 0px 4px 8px rgb(97 97 97 / 18%);
+  box-shadow: 0 2px 4px rgb(97 97 97 / 18%), 0 4px 8px rgb(97 97 97 / 18%);
   -webkit-transition: box-shadow 0.3s ease;
   -moz-transition: box-shadow 0.3s ease;
   -ms-transition: box-shadow 0.3s ease;
@@ -29,7 +31,7 @@
   transition: box-shadow 0.3s ease;
 
   &:hover {
-    box-shadow: 0px 1px 1px rgba(97, 97, 97, 0.58), 1px 2px 3px rgba(97, 97, 97, 0.58);
+    box-shadow: 0 1px 1px rgba(97, 97, 97, 0.58), 1px 2px 3px rgba(97, 97, 97, 0.58);
   }
 
   &:focus {
