--- a/src/main/skills/Skills.module.scss
+++ b/src/main/skills/Skills.module.scss
@@ -20,7 +20,16 @@
   padding: 20px;
   border-radius: 12px ;
 }
-
+.click{
+  position: relative;
+}
+.imgClick{
+  position: absolute;
+  top: 110%;
+  left: 80%;
+  width: 110px;
+  height: 100px;
+}
 @media(max-width: 768px){
 
   .wrapper{
@@ -29,10 +38,20 @@
   .section{
     padding: 20px 0 30px;
   }
+  .imgClick{
+    top: 105%;
+    left: 100%;
+  }
 }
 
 @media(max-width: 576px){
   .wrapper{
     grid-template-columns: repeat(2, 150px);
+  }
+  .imgClick{
+    top: 65%;
+    left: 65%;
+    width: 50px;
+    height: 50px;
   }
 }
