--- a/src/main/skills/skill/Skill.module.scss
+++ b/src/main/skills/skill/Skill.module.scss
@@ -10,9 +10,11 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(97, 97, 97, 0.18), 0px 4px 8px rgba(97, 97, 97, 0.18);
   border-radius: 12px;
-&:nth-child(9){
-  grid-column-start: 2;
-}
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  &:hover{
+    transform: scale(1.01) translateX(2px) translateY(-2px);
+    box-shadow: 0 2px 4px rgb(97 97 97 / 58%), 0 4px 10px rgb(97 97 97 / 58%);
+  }
 }
 
 .img{
@@ -30,10 +32,10 @@
 
 @media(max-width: 768px){
   .skillBlock{
-    &:nth-child(9){
+    &:nth-of-type(9){
       grid-column-start: initial;
     }
-    &:nth-child(10){
+    &:nth-of-type(10){
       grid-column-start: 2;
     }
   }
