--- a/src/header/navigation/Nav.module.scss
+++ b/src/header/navigation/Nav.module.scss
@@ -20,6 +20,33 @@
   }
 }
 
+.aside {
+  position: fixed;
+  top: 40%;
+  left: 10%;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  padding-bottom: 0;
+  animation-name: fadeInTopLeft;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+
+  &::after {
+    bottom: 5px;
+    right: initial;
+    left: -20px;
+    width: 1px;
+    height: 180px;
+  }
+
+  .navLink {
+    &:after {
+      top: 30px;
+    }
+  }
+}
+
 .navLink {
   position: relative;
   font-weight: 700;
@@ -55,6 +82,41 @@
 
 .socialAside {
   display: none;
+}
+
+
+@media (max-width: 1540px) {
+  .aside {
+    left: 50px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .aside {
+    top: 0;
+    right: 0;
+    left: 0;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 930px;
+    margin: 0 auto;
+    padding: 15px 0;
+    z-index: 15;
+    background: radial-gradient(75% 25% at 25% 25%, rgba(26, 21, 21, 0) 0%, rgba(1, 1, 1, 0.05) 100%), #FFFFFF;
+
+    &::after {
+      bottom: 0;
+      right: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+    }
+    .navLink {
+      &:after {
+        top: 36px;
+      }
+    }
+  }
 }
 
 @media (max-width: 576px) {
@@ -107,10 +169,10 @@
       transform: translate(0);
     }
   }
-  .socialItem{
+  .socialItem {
     width: 40px;
     height: 40px;
-    border-radius:50%;
+    border-radius: 50%;
     box-shadow: 0 2px 4px rgb(97 97 97 / 18%), 0px 4px 8px rgb(97 97 97 / 18%);
     -webkit-transition: box-shadow 0.3s ease;
     -moz-transition: box-shadow 0.3s ease;
@@ -127,7 +189,8 @@
     height: 40px;
   }
 }
-@media(max-height: 500px){
+
+@media(max-height: 500px) {
   .navList {
     padding-top: 30px;
     overflow: auto;
@@ -141,8 +204,27 @@
   }
   .socialAside {
     flex-direction: column;
-    left:80%;
+    left: 80%;
     top: initial;
     bottom: 10px;
   }
+}
+
+
+@keyframes fadeInTopLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, -100%, 0);
+    transform: translate3d(-100%, -100%, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.animate__fadeInTopLeft {
+  -webkit-animation-name: fadeInTopLeft;
+  animation-name: fadeInTopLeft;
 }
