--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,13 @@
     text-align: center;
     margin-bottom: 40px;
 }
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
