--- a/src/main/hireMe/form/Form.module.scss
+++ b/src/main/hireMe/form/Form.module.scss
@@ -1,10 +1,12 @@
 .form {
+  position: relative;
   padding: 10px 0;
   width: 100%;
   -webkit-appearance: none;
 }
 
 .wrapper {
+
   display: flex;
   justify-content: center;
   gap: 25px;
@@ -30,6 +32,10 @@
   -o-transition: box-shadow 0.3s ease;
   transition: box-shadow 0.3s ease;
 
+  &::placeholder {
+    color: #828282;
+  }
+
   &:hover {
     box-shadow: 0 1px 1px rgba(97, 97, 97, 0.58), 1px 2px 3px rgba(97, 97, 97, 0.58);
   }
@@ -38,12 +44,43 @@
     outline: transparent;
     box-shadow: 2px 2px 2px rgba(97, 97, 97, 0.58), 2px 4px 5px rgba(97, 97, 97, 0.58);
   }
+  &.error {
+    box-shadow: 2px 2px 2px rgba(245, 65, 61, 0.58), 2px 4px 5px rgba(245, 65, 61, 0.58);
+  }
+  &.error::placeholder {
+    color: transparent;
+  }
 }
 
 .nameInput {
   margin-bottom: 10px;
 }
 
+.nameErrorMsg,
+.mailErrorMsg,
+.messageErrorMsg{
+  position: absolute;
+  top: -10px;
+  left: 20px;
+  color: transparent;
+  -webkit-transition: color 0.3s;
+  -moz-transition: color 0.3s;
+  -ms-transition: color 0.3s;
+  -o-transition: color 0.3s;
+  transition: color 0.3s;
+
+  &.error {
+    color: #F5413D;
+  }
+}
+.mailErrorMsg{
+  top: initial;
+  bottom: 70px;
+}
+.messageErrorMsg{
+  left: initial;
+  right: 20px;
+}
 .telInput {
   -webkit-appearance: none;
 }
@@ -95,7 +132,7 @@
 .mailImg {
   position: absolute;
   top: 15px;
-  left: 15px;
+  left: 16px;
   width: 20px;
   height: 20px;
   animation-duration: 3s;
@@ -103,38 +140,37 @@
   animation-iteration-count: infinite;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  /* display: none; <- Crashes Chrome on hover */
-  -webkit-appearance: none;
-  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-}
-
-input[type=number] {
-  -moz-appearance: textfield; /* Firefox */
-}
-
 @keyframes grow {
   from {
     transform: scale(1);
   }
   50% {
-    transform: scale(1.2);
+    transform: scale(1.25);
   }
   to {
     transform: scale(1);
   }
 }
 
-@media(max-width: 576px){
+@media(max-width: 576px) {
 
   .wrapper {
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
   }
 
   .inputBlock,
-  .textAreaBlock  {
+  .textAreaBlock {
     width: 100%;
+  }
+  .mailErrorMsg{
+    top: 130px;
+    bottom: initial;
+  }
+  .messageErrorMsg{
+    top: initial;
+    bottom: 70px;
+    right: initial;
+    left: 20px;
   }
 }
