--- a/src/main/experience/slider/Slider.module.scss
+++ b/src/main/experience/slider/Slider.module.scss
@@ -1,7 +1,7 @@
 .slide{
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 25px;
   width: 80%;
   min-height: 150px;
   margin: 0 auto;
@@ -17,11 +17,16 @@
   align-self: normal;
 }
 .courses{
-  background-position: 20px 10px,30px 80px, 80% center ;
-  background-size: 50px, 50px, 50px ;
+  background-position: 20px 10px,30px 80px,80% 10px,80% 70px;
+  background-size: 50px, 50px, 50px, 50px;
   background-repeat: no-repeat;
 }
 .lotte{
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.liga{
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -62,17 +67,17 @@
   width: 160px;
 }
   .courses{
-    background-position: 20px 10px,30px 80px, 90% center ;
+    background-position: 20px 10px,30px 80px, 90% 10px, 90% 70px ;
   }
 }
 
 @media(max-width:768px){
   .img{
-    width: 100px;
+    width: 140px;
     margin-right: 0;
   }
   .courses{
-    background-position: 40px top,40px center, 40px bottom ;
+    background-position: 0 10px,60px 30px, 0px 90px, 60px 100px ;
   }
 }
 
@@ -82,12 +87,12 @@
     gap: 10px;
   }
   .img{
-    width: 180px;
+    width: 300px;
     height: 50px;
     margin: 0 auto;
   }
   .courses{
-    background-position: left bottom,60px 7px, right bottom ;
+    background-position: left bottom,60px 7px, 135px bottom, 200px 0px;
   }
   .lotte{
     height: 120px;
