--- a/src/main/portfolio/project/Project.module.scss
+++ b/src/main/portfolio/project/Project.module.scss
@@ -1,14 +1,14 @@
 .projectBlock {
   padding-bottom: 5px;
   min-height: 150px;
-  box-shadow: 0 2px 4px rgba(97, 97, 97, 0.18), 0px 4px 8px rgba(97, 97, 97, 0.18);
+  box-shadow: 0 2px 10px 0 #070707;
   border-radius: 12px;
   overflow: hidden;
   transition: all 0.3s;
   margin-bottom: 30px;
 
   &:hover {
-    transform: scale(1.1) translateX(5px) translateY(-5px);
+    transform: scale(1.05) translateX(5px) translateY(-5px);
     box-shadow: 0 4px 8px rgba(97, 97, 97, 0.58), 0px 8px 20px rgba(97, 97, 97, 0.58);
     filter: saturate(120%) brightness(105%);
 
@@ -35,7 +35,7 @@
   font-weight: 500;
   line-height: 1.4;
   padding: 5px;
-  background-color: rgba(230, 230, 230, 0.9);
+  background-color: rgb(245, 245, 245);
   border-radius: 12px;
   border: 1px solid #E0E0E0;
   -webkit-transition: opacity 0.3s;
@@ -43,6 +43,7 @@
   -ms-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s;
+  box-shadow: 0 2px 10px 0 #070707;
   opacity: 0;
 }
 
@@ -62,12 +63,13 @@
 }
 
 .link {
-  padding: 5px;
+  position: relative;
+  padding: 5px 15px 4px;
   margin: 0 auto;
   text-align: center;
   cursor: pointer;
   border-radius: 10px;
-  border: 1px solid rgba(224, 224, 224, 1);
+  border: 1px solid #070707;
   background-color: rgba(255, 255, 255, 0.9);
   color: #070707;
   -webkit-transition: border-color 0.3s, box-shadow 0.3s;
@@ -112,6 +114,25 @@
   color: #414141;
   font-size: 16px;
   text-align: left;
+}
+
+
+.stackInfo{
+  padding: 10px;
+  width: 85%;
+}
+.stackBlock{
+display: flex;
+width: 100%;
+gap: 10px;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+margin-bottom: 20px;
+}
+.stackImg{
+max-width: 30px;
+max-height: 30px;
 }
 
 @media(max-width: 1300px) {
